hw01_k2s_basics/app-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-app
  namespace: otus
spec:
  type: ClusterIP
  ports:
    - port: 7777
      targetPort: 3000
  selector:
    app: my-node-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-node-app
  namespace: otus
  labels:
    app: my-node-app-d
spec:
  selector:
    matchLabels:
      app: my-node-app
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: my-node-app
    spec:
      containers:
        - image: exslims1/otus-hw01:0.0.3
          name: my-node-app-container
          ports:
            - containerPort: 3000
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
